# social-implementation

./: .gitignore  API_App.py  API_app.py  API_script.js  README.md  home.html  log.html  login.html  login_data.json  main.py  pyproject.toml  received_data.json
Static/: API_script.js
Static/css/: home.css
Static/js/: input_record.js  log_stats.js  register.js
css/: css.md
db/: db.md  food_loss.db
img/: img.md
lib/: lib.md
python/: _statistics.py  app.py  chatgpt_module.py  data_prs.py  insert_user.py  knowledge.py  models.py  schemas.py  services.py  statistics.py
social-implementation-main/: API_App.py  pyproject.toml
social-implementation-main/Static/css/: footer.css
social-implementation-main/python/: database.py  statistics.py
social-implementation-main/templates/: account.html  footer.html  index.html  log.html  login.html
static/css/: account.css  footer.css  home.css  input.css  knowledge.css  log.css  login_style.css  points.css
static/excel/: 豆知識(その他).csv  豆知識(掃除).csv  豆知識(料理).csv
static/js/: knowledge.js  points.js
templates/: account.html  create_account.html  footer.html  home.html  index.html  input.html  knowledge.html  log.html  login.html  points.html  register.html
