[project]
name = "social-implementation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "sqlalchemy-orm>=1.2.10",
]
